--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -384,6 +384,8 @@
     <string name="github_qq_browser_kernel">网页由 www.youcaiwx.com 提供\nQQ浏览器X5内核提供技术支持</string>
     <string name="github_qq_browser_urlIllegality">网页链接不正确</string>
     <string name="title_activity_test_login">Sign in</string>
+
+
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
@@ -447,6 +449,11 @@
     <string name="pay_miss_orderinfo">订单信息有误</string>
     <string name="pay_commitOrderSuccess2">请在24小时内完成支付，超时后将取消订单</string>
     <string name="pay_noinstanl">您尚未安装微信，请安装后重试</string>
+
+    <string name="pay_result_success">支付成功</string>
+    <string name="pay_result_failed">支付失败</string>
+    <string name="pay_result_cancel">已取消支付</string>
+    <string name="pay_result_waitting">正在支付</string>
     <!-- Strings related to 提交订单 end-->
 
 
@@ -536,6 +543,7 @@
     <string name="integral_paysuccess">支付成功</string>
     <string name="integral_payFailed">支付失败</string>
     <!--string related to 积分  end-->
+
 
     <!--string related to 优惠卷  start-->
     <string name="coupon_course">仅限正课使用</string>
