--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,13 +88,17 @@
     <string name="course_ask">课程答疑</string>
     <string name="course_download">下载列表</string>
     <string name="course_getInfoError">视频信息获取失败</string>
-    <string name="course_collectionSuccess">Get √</string>
-    <string name="course_collectionCancel">ヾ(￣▽￣)Bye~Bye~</string>
+    <!--<string name="course_collectionSuccess">Get √</string>
+    <string name="course_collectionCancel">ヾ(￣▽￣)Bye~Bye~</string>-->
+    <string name="course_collectionSuccess">已收藏</string>
+    <string name="course_collectionCancel">已取消收藏</string>
     <string name="course_qualityLoading">正在切换画质</string>
     <string name="course_qualityLoadingCompleted">画质切换完毕</string>
     <string name="course_changing">切换中,请稍后</string>
     <string name="course_PDFloading">讲义加载中,请稍后</string>
     <string name="course_PDFnotExits">讲义不存在</string>
+    <string name="course_PDF_changeToPDF">已切换为讲义</string>
+    <string name="course_PDF_changeToVideo">已切换为视频</string>
     <string name="course_NumOfLearning">%s人学习过</string>
     <string name="video">视频</string>
     <string name="notes">讲义</string>
@@ -344,6 +348,7 @@
     <string name="question_tips_rightAnswer">正确答案</string>
     <string name="question_tips_unfinished">您还有题未做完，确定交卷嘛？</string>
     <string name="question_tips_savepager">是否保存本次练习进度并退出？</string>
+    <string name="question_tips_whetherSavePager">是否交卷？</string>
     <string name="question_tips_Itstimeto">时间到！</string>
     <string name="question_tips_submitting">交卷中</string>
     <string name="question_tips_saveing">试卷保存中</string>
