--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -396,8 +396,8 @@
     <!-- Strings related to 成绩统计 end-->
 
 
-    <!--<string name="github_qq_browser_kernel">The web page is provided by github.com.\nThe QQ browser X5 kernel has been enabled.</string>-->
-    <string name="github_qq_browser_kernel">网页由 www.youcaiwx.com 提供\nQQ浏览器X5内核提供技术支持</string>
+    <!--<string name="github_qq_browser_kernel">The web page is provided by www.youcaiwx.cn.\nThe QQ browser X5 kernel has been enabled.</string>-->
+    <string name="github_qq_browser_kernel">网页由 www.youcaiwx.cn 提供\nQQ浏览器X5内核提供技术支持</string>
     <string name="github_qq_browser_urlIllegality">网页链接校验失败</string>
     <string name="title_activity_test_login">Sign in</string>
 
