--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -648,10 +648,11 @@
     <string name="TheSendRequestWasDenied">发送请求被拒绝</string>
     <string name="sharedError">分享失败</string>
     <string name="sharedSuccess">分享成功</string>
-    <string name="permission_camera">如果你拒绝了权限，你将无法使用相机，请点击授予权限</string>
-    <string name="permission_call">如果你拒绝了权限，你将无法拨打电话，请点击授予权限</string>
-    <string name="permission_sdcard">如果你拒绝了权限，你将无法使用视频服务，请点击授予权限</string>
-    <string name="permission_sdcard2">如果你拒绝了权限，你将无法使用相册服务，请点击授予权限</string>
+    <!--<string name="permission_camera">如果您拒绝了权限，你将无法使用相机，请授予权限</string>-->
+    <string name="permission_camera">如果你拒绝了权限，你将无法使用相机，请授予权限</string>
+    <string name="permission_call">如果你拒绝了权限，你将无法拨打电话，请授予权限</string>
+    <string name="permission_sdcard">如果你拒绝了权限，你将无法使用视频服务，请授予权限</string>
+    <string name="permission_sdcard2">如果你拒绝了权限，你将无法使用相册服务，请授予权限</string>
     <string name="permission_explication">授权失败,请手动去设置页打开权限，或者重试授权权限</string>
     <string name="pay_confirm_pay">确认付款</string>
     <!--string related to common end-->
