--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,8 +136,9 @@
     <string name="holder_courseTime">课时:\u3000</string>
     <string name="first_login">请先登录</string>
     <string name="course_baoming">立即报名</string>
-    <string name="course_bugBank">您还未拥有题库</string>
+    <string name="course_buyBank">您还未拥有题库</string>
     <string name="course_buyCourse">您还未拥有课程</string>
+    <!--<string name="course_buyCourse">您还未购买课程，请购买后进行观看</string>-->
     <string name="course_notAsk">该课程无法提问</string>
     <string name="course_completed">播放完毕</string>
     <string name="course_videoLoading">视频加载中</string>
